--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -204,9 +204,7 @@ Marcus Nygren}
 
 	%Skapa sammanfattning
 	\begin{abstract}
-		I den här rapporten presenteras en Eulerisk implementation av Navier-Stokes ekvationer för att simulera rök, och i förlängningen även andra fluider. Beräkningarna görs i 3D på datorns GPU, medan representationen sker i 2D. 
-		
-		Rapporten kan användas som ett stöd inför utförandet av en egen fluidsimulering, eller som en praktisk redogörelse för Navier-Stokes ekvationer.
+		I den här rapporten presenteras en Eulerisk implementation av Navier-Stokes ekvationer för att simulera rök, och i förlängningen även andra fluider. Beräkningarna görs i 3D på datorns GPU, vilket möjliggör rendering av fluiden i realtid. Rapporten i sig kan användas som ett stöd inför utförandet av en egen fluidsimulering eller som ett exempel på en enkel redogörelse av Navier-Stokes ekvationer.
 	\end{abstract}
 	
 	% skapar innehållsförteckning.
