--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -807,7 +807,7 @@ void main()
 	   \bibitem{Grasshopper}
 	   Philip Rideout \emph{Simple Fluid Simulation, http://prideout.net/blog/?p=58}, The Little Grasshopper 2010, 2014-03-11
 	\end{thebibliography}
-		
+	% Ref: http://www.bsu.edu/libraries/virtualpress/mathexchange/07-01/aderivationofthenavier-stokesequations.pdf
 	\newpage
 	\appendix
 
